--- a/css/exercise-types/reading-type8.css
+++ b/css/exercise-types/reading-type8.css
@@ -46,7 +46,7 @@
   font-size: 1rem;
   font-weight: 700;
   color: var(--text-dark);
-  text-align: center;
+  text-align: left;
   flex: 1;
 }
 
